--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< Updated upstream
     "/build/layouts/activecampaign/index.min.css": "/build/layouts/activecampaign/index.min.css?id=af8878ab32abe2c0abf3af54f070552a",
     "/build/layouts/activecampaign/index.min.js": "/build/layouts/activecampaign/index.min.js?id=aa56c970895e353db30cc2cfdd1978a9",
     "/build/layouts/activecampaign/show.min.css": "/build/layouts/activecampaign/show.min.css?id=6e0ef65eedd2569bbdbe1db3a29a52dd",
@@ -24,7 +23,7 @@
     "/build/layouts/attendance/index.min.js": "/build/layouts/attendance/index.min.js?id=1a18bb242218370b6d50cb9b36ed76e1",
     "/build/layouts/chargebacks/contestations-files.min.css": "/build/layouts/chargebacks/contestations-files.min.css?id=842168624254584a96af4a5168448181",
     "/build/layouts/chargebacks/contestations-files.min.js": "/build/layouts/chargebacks/contestations-files.min.js?id=920a5e46fb71c65b5d0f62c600e4ced0",
-    "/build/layouts/chargebacks/contestations-index.min.css": "/build/layouts/chargebacks/contestations-index.min.css?id=55b26c67bedc1366d20adec5ac74f846",
+    "/build/layouts/chargebacks/contestations-index.min.css": "/build/layouts/chargebacks/contestations-index.min.css?id=d31c1c6f8bbca4b7927ebde6848f89eb",
     "/build/layouts/chargebacks/contestations-index.min.js": "/build/layouts/chargebacks/contestations-index.min.js?id=1d0166f1c6e8221cf27a26451c8660bd",
     "/build/layouts/chargebacks/svg/info-contestation.svg": "/build/layouts/chargebacks/svg/info-contestation.svg?id=48fa024c1780becac7b52e40acdfd1d1",
     "/build/layouts/checkouteditor/dropify.eot": "/build/layouts/checkouteditor/dropify.eot?id=c8841056ec6b01fa870c1d9c84d55a36",
@@ -83,11 +82,11 @@
     "/build/layouts/dashboard/onboarding-details.min.js": "/build/layouts/dashboard/onboarding-details.min.js?id=bfa4c297cb89cbf41e0c32b7efac3298",
     "/build/layouts/dashboard/pix.min.css": "/build/layouts/dashboard/pix.min.css?id=c65493bb12c1f55b49b175c7d1e5b491",
     "/build/layouts/dashboard/pix.min.js": "/build/layouts/dashboard/pix.min.js?id=bfa4c297cb89cbf41e0c32b7efac3298",
-    "/build/layouts/dashboard/achievement-details.min.css": "/build/layouts/dashboard/achievement-details.min.css?id=c9b8231fc0290781090dafcf8462414e",
+    "/build/layouts/dashboard/achievement-details.min.css": "/build/layouts/dashboard/achievement-details.min.css?id=23f6d0b2d5f7b3bb1cef517e3ebd1b29",
     "/build/layouts/dashboard/app.min.css": "/build/layouts/dashboard/app.min.css?id=a15c2ac3234aa8f6064ef9c1f7383c37",
     "/build/layouts/dashboard/app.min.js": "/build/layouts/dashboard/app.min.js?id=083ac2081222c586ae7627b74de60401",
     "/build/layouts/dashboard/stylesheets.min.css": "/build/layouts/dashboard/stylesheets.min.css?id=9d979f8c8d8c6c5d2ce208d25fdab9ff",
-    "/build/layouts/dashboard/scripts.min.js": "/build/layouts/dashboard/scripts.min.js?id=a195d4ae939fc63b5b732f51f333c8c9",
+    "/build/layouts/dashboard/scripts.min.js": "/build/layouts/dashboard/scripts.min.js?id=8694257561a3d9a7cc547e514e55a765",
     "/build/layouts/finances/withdrawal-custom.min.js": "/build/layouts/finances/withdrawal-custom.min.js?id=99ede2f25fb8c36cfa8a2679b196ae73",
     "/build/layouts/finances/withdrawal-default.min.js": "/build/layouts/finances/withdrawal-default.min.js?id=3c42bd4e2f025da716d0c86de93f9239",
     "/build/layouts/finances/detail.min.js": "/build/layouts/finances/detail.min.js?id=0b3f00968d4e63f7c4124776c797e585",
@@ -178,7 +177,7 @@
     "/build/layouts/sales/details.min.css": "/build/layouts/sales/details.min.css?id=842168624254584a96af4a5168448181",
     "/build/layouts/sales/details.min.js": "/build/layouts/sales/details.min.js?id=6bfec24777e78e040cf87ed8d72b04af",
     "/build/layouts/sales/index.min.css": "/build/layouts/sales/index.min.css?id=900e987cee1802d2284beb84e8f02349",
-    "/build/layouts/sales/index.min.js": "/build/layouts/sales/index.min.js?id=fdf3d808c67239c2b81b04b63c4c6a59",
+    "/build/layouts/sales/index.min.js": "/build/layouts/sales/index.min.js?id=c1cd37beb7c8bcafc99a9a5942c002b7",
     "/build/layouts/salesblacklistantifraud/details.min.css": "/build/layouts/salesblacklistantifraud/details.min.css?id=842168624254584a96af4a5168448181",
     "/build/layouts/salesblacklistantifraud/index.min.css": "/build/layouts/salesblacklistantifraud/index.min.css?id=be50f5f264aef6d6a6586de97bbd7549",
     "/build/layouts/salesblacklistantifraud/index.min.js": "/build/layouts/salesblacklistantifraud/index.min.js?id=5f2c60a349ff94aa6bb0377c3f05f135",
@@ -226,6 +225,35 @@
     "/build/layouts/master/border-anim-v.gif": "/build/layouts/master/border-anim-v.gif?id=f0de8166e020b04f4c9e5062a5f29974",
     "/build/layouts/master/border-h.gif": "/build/layouts/master/border-h.gif?id=cf0241ad6b8781a07a8414371f1ab2d4",
     "/build/layouts/master/border-v.gif": "/build/layouts/master/border-v.gif?id=77d97f66e0d5748343d45e86cdc81f02",
+    "/build/global/adminremark/assets/images/.gitkeep": "/build/global/adminremark/assets/images/.gitkeep?id=d41d8cd98f00b204e9800998ecf8427e",
+    "/build/global/adminremark/assets/images/00.png": "/build/global/adminremark/assets/images/00.png?id=0fe71e9780ea31f7c029c45df4049aeb",
+    "/build/global/adminremark/assets/images/apple-touch-icon.png": "/build/global/adminremark/assets/images/apple-touch-icon.png?id=d5c20976abb4664e7335129ec4e97220",
+    "/build/global/adminremark/assets/images/arrow.svg": "/build/global/adminremark/assets/images/arrow.svg?id=6f88760656b6c9817df3872b25cd2eb5",
+    "/build/global/adminremark/assets/images/cloudfox_logo.png": "/build/global/adminremark/assets/images/cloudfox_logo.png?id=bb3503fd38c460143256551aae3fa991",
+    "/build/global/adminremark/assets/images/empty-benefits.png": "/build/global/adminremark/assets/images/empty-benefits.png?id=d6599f5b5010cc74e4cf254034d892c8",
+    "/build/global/adminremark/assets/images/facebook-icon.svg": "/build/global/adminremark/assets/images/facebook-icon.svg?id=45efb3ab3ae1f840f9e7ee6e36251016",
+    "/build/global/adminremark/assets/images/favicon.ico": "/build/global/adminremark/assets/images/favicon.ico?id=c2e3625029fda18bacfbbf6ca349fab6",
+    "/build/global/adminremark/assets/images/g-icon.svg": "/build/global/adminremark/assets/images/g-icon.svg?id=6dc7caf79ab948dba300bf314ef58f08",
+    "/build/global/adminremark/assets/images/gradient-bg.png": "/build/global/adminremark/assets/images/gradient-bg.png?id=248787618af1cd5b3461ccc39a2eab95",
+    "/build/global/adminremark/assets/images/group-2.svg": "/build/global/adminremark/assets/images/group-2.svg?id=a187011d6319861970eea2a368a175ae",
+    "/build/global/adminremark/assets/images/logo-blue.png": "/build/global/adminremark/assets/images/logo-blue.png?id=637321aaeb0127f515e4891d84320de8",
+    "/build/global/adminremark/assets/images/logo-blue@2x.png": "/build/global/adminremark/assets/images/logo-blue@2x.png?id=cca53539489abb961616c251db8a1ea5",
+    "/build/global/adminremark/assets/images/logo-colored.png": "/build/global/adminremark/assets/images/logo-colored.png?id=a0f9304e497ba977b4911b6f8a51410e",
+    "/build/global/adminremark/assets/images/logo-colored@2x.png": "/build/global/adminremark/assets/images/logo-colored@2x.png?id=c4ca3e11ee5a6a35a3ec1c0ccedff810",
+    "/build/global/adminremark/assets/images/logo-oficial.svg": "/build/global/adminremark/assets/images/logo-oficial.svg?id=3b388a1404326c3ccd2eb9dc115af2cc",
+    "/build/global/adminremark/assets/images/logo.png": "/build/global/adminremark/assets/images/logo.png?id=4a65a525b7959841bd9d2ab9e82fee8e",
+    "/build/global/adminremark/assets/images/logo0.png": "/build/global/adminremark/assets/images/logo0.png?id=75c72f5d00fd873603f531f7019b6c3d",
+    "/build/global/adminremark/assets/images/logo@2x.png": "/build/global/adminremark/assets/images/logo@2x.png?id=ccfc2f4a1bb5d1cebc416ce71bee5f5b",
+    "/build/global/adminremark/assets/images/nivel-1.png": "/build/global/adminremark/assets/images/nivel-1.png?id=a3df7a282b84e3fe9b8173593241f107",
+    "/build/global/adminremark/assets/images/nivel-2.png": "/build/global/adminremark/assets/images/nivel-2.png?id=9f2cc41df323434f126d021d0013f90a",
+    "/build/global/adminremark/assets/images/nivel-3.png": "/build/global/adminremark/assets/images/nivel-3.png?id=f194c8eae69411e3e0943004aa7e8c9b",
+    "/build/global/adminremark/assets/images/nivel-4.png": "/build/global/adminremark/assets/images/nivel-4.png?id=b348ac47f40e3847cc2768334cf425d3",
+    "/build/global/adminremark/assets/images/nivel-5.png": "/build/global/adminremark/assets/images/nivel-5.png?id=4e057fb18d55f9e6cc7fe6b2b85d9c01",
+    "/build/global/adminremark/assets/images/nivel-6.png": "/build/global/adminremark/assets/images/nivel-6.png?id=8364d07489f0b8c51a683c7f3e7b3cef",
+    "/build/global/adminremark/assets/images/pattern-sirius.svg": "/build/global/adminremark/assets/images/pattern-sirius.svg?id=3c4d64053c7c9f3076621824a32fc502",
+    "/build/global/adminremark/assets/images/produtos.svg": "/build/global/adminremark/assets/images/produtos.svg?id=af6d5902279d40af72ba47cf914d301d",
+    "/build/global/adminremark/assets/images/sirius.svg": "/build/global/adminremark/assets/images/sirius.svg?id=02a17d392923a8087cb76715d934e19a",
+    "/build/global/adminremark/assets/images/siriusM.svg": "/build/global/adminremark/assets/images/siriusM.svg?id=54119f088bdd8cf8a4d0417b716bbd7d",
     "/build/global/css/font/GilroyBold.woff": "/build/global/css/font/GilroyBold.woff?id=34941d8a3cf879ee2620893a3e01b49a",
     "/build/global/css/font/GilroyLight.woff": "/build/global/css/font/GilroyLight.woff?id=56ee867789a4441967491844915ac521",
     "/build/global/css/font/GilroyRegular.woff": "/build/global/css/font/GilroyRegular.woff?id=de9a41f57672ed8a65b4c71c127226c7",
@@ -591,8 +619,4 @@
     "/build/global/img/svg/vitrine.png": "/build/global/img/svg/vitrine.png?id=599899880b9b4167a5e08cbefcfdc820",
     "/build/global/img/svg/vitrine.svg": "/build/global/img/svg/vitrine.svg?id=7c8778ecc27cd7bcdcd8eecda1844f4c",
     "/build/global/img/svg/whatsapp.svg": "/build/global/img/svg/whatsapp.svg?id=97764c009265fbf698c85400a55016eb"
-=======
-    "/modules/astronmembers/css/index.css": "/modules/astronmembers/css/index.css?id=35ba55107cb922959fcc",
-    "/modules/astronmembers/js/index.js": "/modules/astronmembers/js/index.js?id=fcde8f1777dbd579c594"
->>>>>>> Stashed changes
 }
