Notificações Inteligentes - Integration -

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,11 +14,13 @@
     "/build/layouts/affiliates/border-h.gif": "/build/layouts/affiliates/border-h.gif?id=cf0241ad6b8781a07a8414371f1ab2d4",
     "/build/layouts/affiliates/border-v.gif": "/build/layouts/affiliates/border-v.gif?id=77d97f66e0d5748343d45e86cdc81f02",
     "/build/layouts/apps/index.min.css": "/build/layouts/apps/index.min.css?id=1b73f6a98d7f39ce8a19da172dd1b301",
-    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=9d0e766d7d07de064bfe4990de06dd96",
+    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=448a70ab21f86a997b51850f8a6314d5",
     "/build/layouts/apps/imgs/bt-action-hover.svg": "/build/layouts/apps/imgs/bt-action-hover.svg?id=646d87703670bb5999ed53b54492a841",
     "/build/layouts/apps/imgs/bt-action.svg": "/build/layouts/apps/imgs/bt-action.svg?id=96bec9d075f7a81e7b3c45d424a68d73",
     "/build/layouts/astronmembers/index.min.css": "/build/layouts/astronmembers/index.min.css?id=03d70b7f8f633999fa840847bc5468f2",
     "/build/layouts/astronmembers/index.min.js": "/build/layouts/astronmembers/index.min.js?id=afc39c32a7111be3103c20a3b2ec0563",
+    "/build/layouts/notificacoesInteligentes/index.min.css": "/build/layouts/notificacoesInteligentes/index.min.css?id=9164b75af230c664ec8c838e4547cca2",
+    "/build/layouts/notificacoesInteligentes/index.min.js": "/build/layouts/notificacoesInteligentes/index.min.js?id=5732a681cf6e6ed04e05693d166a7a22",
     "/build/layouts/attendance/index.min.css": "/build/layouts/attendance/index.min.css?id=b38b92e77f11f0f36080ebc61d04028b",
     "/build/layouts/attendance/index.min.js": "/build/layouts/attendance/index.min.js?id=1a18bb242218370b6d50cb9b36ed76e1",
     "/build/layouts/chargebacks/contestations-files.min.css": "/build/layouts/chargebacks/contestations-files.min.css?id=842168624254584a96af4a5168448181",
