push after compiling files

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -289,6 +289,8 @@
     "/build/global/img/emptyprojetos.svg": "/build/global/img/emptyprojetos.svg?id=2d50e5adbd78fc4c8dc876d91c7daea5",
     "/build/global/img/emptyvendas.svg": "/build/global/img/emptyvendas.svg?id=f05593c322003861e67325c824457a9a",
     "/build/global/img/error.png": "/build/global/img/error.png?id=012c250e654e55eff4e6eb78e7135514",
+    "/build/global/img/estorno-calendar.svg": "/build/global/img/estorno-calendar.svg?id=d62217963788317b7667dc213913328b",
+    "/build/global/img/estorno-money.svg": "/build/global/img/estorno-money.svg?id=164f9cb25afbf0240668dff77677deee",
     "/build/global/img/extrato.svg": "/build/global/img/extrato.svg?id=849baf26258582fae1e5d6caafef4690",
     "/build/global/img/falta-pouco.png": "/build/global/img/falta-pouco.png?id=ae347131c2956e1dd9cd1cb17f61c22c",
     "/build/global/img/favicon-16x16.png": "/build/global/img/favicon-16x16.png?id=51154484e113f76d0953aa7a8a930681",
