Update images( 404 ) and cashback + sales in finances screen.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -505,6 +505,51 @@
     "/build/global/img/projects/successIcon.svg": "/build/global/img/projects/successIcon.svg",
     "/build/global/img/projects/trackIcon.svg": "/build/global/img/projects/trackIcon.svg",
     "/build/global/img/projects/trash.svg": "/build/global/img/projects/trash.svg",
+    "/build/global/img/reports/arrow-right.png": "/build/global/img/reports/arrow-right.png",
+    "/build/global/img/reports/bg-no-graph.png": "/build/global/img/reports/bg-no-graph.png",
+    "/build/global/img/reports/blokedbalance.png": "/build/global/img/reports/blokedbalance.png",
+    "/build/global/img/reports/cash.png": "/build/global/img/reports/cash.png",
+    "/build/global/img/reports/ico-android.svg": "/build/global/img/reports/ico-android.svg",
+    "/build/global/img/reports/ico-apple.svg": "/build/global/img/reports/ico-apple.svg",
+    "/build/global/img/reports/ico-arrow-finance.svg": "/build/global/img/reports/ico-arrow-finance.svg",
+    "/build/global/img/reports/ico-arrow-green-finance.png": "/build/global/img/reports/ico-arrow-green-finance.png",
+    "/build/global/img/reports/ico-arrow.png": "/build/global/img/reports/ico-arrow.png",
+    "/build/global/img/reports/ico-arrow.svg": "/build/global/img/reports/ico-arrow.svg",
+    "/build/global/img/reports/ico-arrow.svg:Zone.Identifier": "/build/global/img/reports/ico-arrow.svg:Zone.Identifier",
+    "/build/global/img/reports/ico-boleto.svg": "/build/global/img/reports/ico-boleto.svg",
+    "/build/global/img/reports/ico-card.png": "/build/global/img/reports/ico-card.png",
+    "/build/global/img/reports/ico-card.svg": "/build/global/img/reports/ico-card.svg",
+    "/build/global/img/reports/ico-cart.svg": "/build/global/img/reports/ico-cart.svg",
+    "/build/global/img/reports/ico-chart.svg": "/build/global/img/reports/ico-chart.svg",
+    "/build/global/img/reports/ico-circle.svg": "/build/global/img/reports/ico-circle.svg",
+    "/build/global/img/reports/ico-coin-dollar.svg": "/build/global/img/reports/ico-coin-dollar.svg",
+    "/build/global/img/reports/ico-cupons.png": "/build/global/img/reports/ico-cupons.png",
+    "/build/global/img/reports/ico-desktop.svg": "/build/global/img/reports/ico-desktop.svg",
+    "/build/global/img/reports/ico-linux.svg": "/build/global/img/reports/ico-linux.svg",
+    "/build/global/img/reports/ico-mkt.png": "/build/global/img/reports/ico-mkt.png",
+    "/build/global/img/reports/ico-mkt.svg": "/build/global/img/reports/ico-mkt.svg",
+    "/build/global/img/reports/ico-mkt.svg:Zone.Identifier": "/build/global/img/reports/ico-mkt.svg:Zone.Identifier",
+    "/build/global/img/reports/ico-no-withdrawals.svg": "/build/global/img/reports/ico-no-withdrawals.svg",
+    "/build/global/img/reports/ico-orderbump.svg": "/build/global/img/reports/ico-orderbump.svg",
+    "/build/global/img/reports/ico-oval-green.png": "/build/global/img/reports/ico-oval-green.png",
+    "/build/global/img/reports/ico-oval-red.png": "/build/global/img/reports/ico-oval-red.png",
+    "/build/global/img/reports/ico-oval-strong.png": "/build/global/img/reports/ico-oval-strong.png",
+    "/build/global/img/reports/ico-oval-yellow.png": "/build/global/img/reports/ico-oval-yellow.png",
+    "/build/global/img/reports/ico-select.png": "/build/global/img/reports/ico-select.png",
+    "/build/global/img/reports/ico-sell.png": "/build/global/img/reports/ico-sell.png",
+    "/build/global/img/reports/ico-signal.svg": "/build/global/img/reports/ico-signal.svg",
+    "/build/global/img/reports/ico-smartphone.svg": "/build/global/img/reports/ico-smartphone.svg",
+    "/build/global/img/reports/ico-state.svg": "/build/global/img/reports/ico-state.svg",
+    "/build/global/img/reports/ico-tablet.svg": "/build/global/img/reports/ico-tablet.svg",
+    "/build/global/img/reports/ico-ticket.svg": "/build/global/img/reports/ico-ticket.svg",
+    "/build/global/img/reports/ico-upsell.svg": "/build/global/img/reports/ico-upsell.svg",
+    "/build/global/img/reports/ico-windows.svg": "/build/global/img/reports/ico-windows.svg",
+    "/build/global/img/reports/ico-withdrawals.svg": "/build/global/img/reports/ico-withdrawals.svg",
+    "/build/global/img/reports/img-casaco.png": "/build/global/img/reports/img-casaco.png",
+    "/build/global/img/reports/img-nodata.png": "/build/global/img/reports/img-nodata.png",
+    "/build/global/img/reports/img-nodata.svg": "/build/global/img/reports/img-nodata.svg",
+    "/build/global/img/reports/pending.png": "/build/global/img/reports/pending.png",
+    "/build/global/img/reports/variation-arrow.svg": "/build/global/img/reports/variation-arrow.svg",
     "/build/global/img/svg/Arrow2.svg": "/build/global/img/svg/Arrow2.svg",
     "/build/global/img/svg/afiliados-b.svg": "/build/global/img/svg/afiliados-b.svg",
     "/build/global/img/svg/afiliados.png": "/build/global/img/svg/afiliados.png",
