--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -129,7 +129,11 @@
     "/build/layouts/projects/raty.svg": "/build/layouts/projects/raty.svg?id=0b1a91645b8dc78dc3dc7ee4827f3c3d",
     "/build/layouts/projects/project.min.css": "/build/layouts/projects/project.min.css?id=f2e35a5e0454167aaef580127d5f84c7",
     "/build/layouts/projects/ckeditor.js": "/build/layouts/projects/ckeditor.js?id=49a096ecdb09de5173a8d475ed9c7a79",
+    "/build/layouts/projects/project.min.js": "/build/layouts/projects/project.min.js?id=cd8c38f4d4cb69acea04b50ce1a70aed",
+    "/build/layouts/projects/index.min.css": "/build/layouts/projects/index.min.css?id=96cfadb8838f6404e6a98e582b8049f7",
+    "/build/layouts/projects/index.min.js": "/build/layouts/projects/index.min.js?id=811f691be82f2b4e0e85500ce361b2b6",
     "/build/layouts/projects/empty.min.css": "/build/layouts/projects/empty.min.css?id=af8878ab32abe2c0abf3af54f070552a",
+    "/build/layouts/projects/empty-company.min.css": "/build/layouts/projects/empty-company.min.css?id=af8878ab32abe2c0abf3af54f070552a",
     "/build/layouts/projects/edit.min.css": "/build/layouts/projects/edit.min.css?id=8c871574d554a95522c7af4884fd3ed8",
     "/build/layouts/projects/dropify.eot": "/build/layouts/projects/dropify.eot?id=c8841056ec6b01fa870c1d9c84d55a36",
     "/build/layouts/projects/dropify.js": "/build/layouts/projects/dropify.js?id=ad4d3e4024fec6cdf711da59e20d61c9",
