Adjustments, new image for components products, when this has less three products views.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -551,6 +551,10 @@
     "/build/global/img/reports/img-casaco.png": "/build/global/img/reports/img-casaco.png",
     "/build/global/img/reports/img-nodata.png": "/build/global/img/reports/img-nodata.png",
     "/build/global/img/reports/img-nodata.svg": "/build/global/img/reports/img-nodata.svg",
+    "/build/global/img/reports/no-coupons.svg": "/build/global/img/reports/no-coupons.svg",
+    "/build/global/img/reports/no-coupons.svg:Zone.Identifier": "/build/global/img/reports/no-coupons.svg:Zone.Identifier",
+    "/build/global/img/reports/no-products.svg": "/build/global/img/reports/no-products.svg",
+    "/build/global/img/reports/no-products.svg:Zone.Identifier": "/build/global/img/reports/no-products.svg:Zone.Identifier",
     "/build/global/img/reports/pending.png": "/build/global/img/reports/pending.png",
     "/build/global/img/reports/variation-arrow.svg": "/build/global/img/reports/variation-arrow.svg",
     "/build/global/img/svg/Arrow2.svg": "/build/global/img/svg/Arrow2.svg",
