--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -551,6 +551,8 @@
     "/build/global/img/reports/img-casaco.png": "/build/global/img/reports/img-casaco.png",
     "/build/global/img/reports/img-nodata.png": "/build/global/img/reports/img-nodata.png",
     "/build/global/img/reports/img-nodata.svg": "/build/global/img/reports/img-nodata.svg",
+    "/build/global/img/reports/list-no-products.svg": "/build/global/img/reports/list-no-products.svg",
+    "/build/global/img/reports/list-no-products.svg:Zone.Identifier": "/build/global/img/reports/list-no-products.svg:Zone.Identifier",
     "/build/global/img/reports/no-coupons.svg": "/build/global/img/reports/no-coupons.svg",
     "/build/global/img/reports/no-coupons.svg:Zone.Identifier": "/build/global/img/reports/no-coupons.svg:Zone.Identifier",
     "/build/global/img/reports/no-products.svg": "/build/global/img/reports/no-products.svg",
