--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -508,6 +508,8 @@
     "/build/global/img/projects/trash.svg": "/build/global/img/projects/trash.svg",
     "/build/global/img/reports/arrow-right.png": "/build/global/img/reports/arrow-right.png",
     "/build/global/img/reports/bg-no-graph.png": "/build/global/img/reports/bg-no-graph.png",
+    "/build/global/img/reports/big-graph.svg": "/build/global/img/reports/big-graph.svg",
+    "/build/global/img/reports/big-graph.svg:Zone.Identifier": "/build/global/img/reports/big-graph.svg:Zone.Identifier",
     "/build/global/img/reports/blokedbalance.png": "/build/global/img/reports/blokedbalance.png",
     "/build/global/img/reports/cash.png": "/build/global/img/reports/cash.png",
     "/build/global/img/reports/empty-state-graph.svg": "/build/global/img/reports/empty-state-graph.svg",
