Adjustments responsiveness in pending and blockedbalanced screens.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -510,6 +510,8 @@
     "/build/global/img/projects/trash.svg": "/build/global/img/projects/trash.svg",
     "/build/global/img/reports/arrow-right.png": "/build/global/img/reports/arrow-right.png",
     "/build/global/img/reports/bg-no-graph.png": "/build/global/img/reports/bg-no-graph.png",
+    "/build/global/img/reports/big-arrow.svg": "/build/global/img/reports/big-arrow.svg",
+    "/build/global/img/reports/big-arrow.svg:Zone.Identifier": "/build/global/img/reports/big-arrow.svg:Zone.Identifier",
     "/build/global/img/reports/big-graph.svg": "/build/global/img/reports/big-graph.svg",
     "/build/global/img/reports/big-graph.svg:Zone.Identifier": "/build/global/img/reports/big-graph.svg:Zone.Identifier",
     "/build/global/img/reports/blokedbalance.png": "/build/global/img/reports/blokedbalance.png",
