--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -514,6 +514,7 @@
     "/build/global/img/reports/big-graph.svg": "/build/global/img/reports/big-graph.svg",
     "/build/global/img/reports/blokedbalance.png": "/build/global/img/reports/blokedbalance.png",
     "/build/global/img/reports/cash.png": "/build/global/img/reports/cash.png",
+    "/build/global/img/reports/close-circle.svg": "/build/global/img/reports/close-circle.svg",
     "/build/global/img/reports/empty-state-graph.svg": "/build/global/img/reports/empty-state-graph.svg",
     "/build/global/img/reports/ico-android.svg": "/build/global/img/reports/ico-android.svg",
     "/build/global/img/reports/ico-apple.svg": "/build/global/img/reports/ico-apple.svg",
