--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,8 +6,8 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=4f4eef385f7c1afbc3419e79675adfbe",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=56db8c089b19b32e0a7f0a75d0745199",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=3d170e2b93feeee6ec8bfda2eec9a70d",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=373feb2ba7d5cca5e08670788822d3d2",
-    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=40a9cc94379aee94889f20bff62ea4c8",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=fdeaabee3277b8582a182e05e9ca304e",
+    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=18c16f0643d89ae894c8956b126118f1",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
     "/build/layouts/affiliates/border-anim-v.gif": "/build/layouts/affiliates/border-anim-v.gif?id=f0de8166e020b04f4c9e5062a5f29974",
@@ -204,8 +204,8 @@
     "/build/layouts/master/sirius-font.ttf": "/build/layouts/master/sirius-font.ttf?id=5dfa5a07c31443df7fa2c29bac2d0a78",
     "/build/layouts/master/sirius-font.woff": "/build/layouts/master/sirius-font.woff?id=136bf0fe67cce4a27966d24b548d7323",
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=e586cff6c953ea552286c2fee00ee38f",
-    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=4105074c2cc4665d7fb6fd6da012454e",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=b202c131a517a92292d2e136a9f0807d",
+    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=e8287bc8cb01428e448698914e481dc1",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=33a0222bf06c2e47d5a94c8c32e5140a",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/master/sentry-bundle.min.js": "/build/layouts/master/sentry-bundle.min.js?id=5d4a6a8523016db604c17e8aa07e60e3",
@@ -529,6 +529,8 @@
     "/build/global/img/svg/atendimento.svg": "/build/global/img/svg/atendimento.svg?id=b457e4e58bfaf8b1acab4286d77edc8f",
     "/build/global/img/svg/atendimentos-abertos.svg": "/build/global/img/svg/atendimentos-abertos.svg?id=55b83ba4f4cadbe649e15fb390138135",
     "/build/global/img/svg/bank-notes.svg": "/build/global/img/svg/bank-notes.svg?id=5f1e4c229147092a1c3b742a1cad3f65",
+    "/build/global/img/svg/bonus-illustration-1.svg": "/build/global/img/svg/bonus-illustration-1.svg?id=47d2ae3d255a8d19d46548ee838e91aa",
+    "/build/global/img/svg/bonus-illustration-2.svg": "/build/global/img/svg/bonus-illustration-2.svg?id=0bc1923f1c53a18ef7cc2f3ff93c1dc7",
     "/build/global/img/svg/caixa-fisica.svg": "/build/global/img/svg/caixa-fisica.svg?id=e2bb14e0e64a5a954bcf563f0ff2165e",
     "/build/global/img/svg/caixinha-altura.svg": "/build/global/img/svg/caixinha-altura.svg?id=447a3a6a315c3cea1793e6ce4c47189f",
     "/build/global/img/svg/caixinha-comprimento.svg": "/build/global/img/svg/caixinha-comprimento.svg?id=13077de7f0f74d4d37a3d18922b56897",
