--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -509,6 +509,7 @@
     "/build/global/img/projects/successIcon.svg": "/build/global/img/projects/successIcon.svg",
     "/build/global/img/projects/trackIcon.svg": "/build/global/img/projects/trackIcon.svg",
     "/build/global/img/projects/trash.svg": "/build/global/img/projects/trash.svg",
+    "/build/global/img/reports/Shape.svg:Zone.Identifier": "/build/global/img/reports/Shape.svg:Zone.Identifier",
     "/build/global/img/reports/arrow-right.png": "/build/global/img/reports/arrow-right.png",
     "/build/global/img/reports/bg-no-graph.png": "/build/global/img/reports/bg-no-graph.png",
     "/build/global/img/reports/big-arrow.svg": "/build/global/img/reports/big-arrow.svg",
@@ -558,6 +559,7 @@
     "/build/global/img/reports/img-nodata1.svg": "/build/global/img/reports/img-nodata1.svg",
     "/build/global/img/reports/list-no-products.svg": "/build/global/img/reports/list-no-products.svg",
     "/build/global/img/reports/no-coupons.svg": "/build/global/img/reports/no-coupons.svg",
+    "/build/global/img/reports/no-origin.svg:Zone.Identifier": "/build/global/img/reports/no-origin.svg:Zone.Identifier",
     "/build/global/img/reports/no-products.svg": "/build/global/img/reports/no-products.svg",
     "/build/global/img/reports/pending.png": "/build/global/img/reports/pending.png",
     "/build/global/img/reports/variation-arrow.svg": "/build/global/img/reports/variation-arrow.svg",
