--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,8 +6,8 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=4f4eef385f7c1afbc3419e79675adfbe",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=56db8c089b19b32e0a7f0a75d0745199",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=3d170e2b93feeee6ec8bfda2eec9a70d",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=b084c8f19789e59ea85d6d839298be4d",
-    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=360c6568bb1e421e47adf0e01463f725",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=c01c2827d82191f839f24641ad31514c",
+    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=7a177a46a04ad2ff3d8af55c74e7792e",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
     "/build/layouts/affiliates/border-anim-v.gif": "/build/layouts/affiliates/border-anim-v.gif?id=f0de8166e020b04f4c9e5062a5f29974",
@@ -78,7 +78,7 @@
     "/build/layouts/dashboard/app.min.css": "/build/layouts/dashboard/app.min.css?id=a15c2ac3234aa8f6064ef9c1f7383c37",
     "/build/layouts/dashboard/app.min.js": "/build/layouts/dashboard/app.min.js?id=083ac2081222c586ae7627b74de60401",
     "/build/layouts/dashboard/stylesheets.min.css": "/build/layouts/dashboard/stylesheets.min.css?id=6f619ce7a78bf03e58693b78e7d07da7",
-    "/build/layouts/dashboard/scripts.min.js": "/build/layouts/dashboard/scripts.min.js?id=0386b2ff983272ec48510a7504df2224",
+    "/build/layouts/dashboard/scripts.min.js": "/build/layouts/dashboard/scripts.min.js?id=b07e9602b9ad5f390e6a107e4fc28a28",
     "/build/layouts/finances/withdrawal-custom.min.js": "/build/layouts/finances/withdrawal-custom.min.js?id=99ede2f25fb8c36cfa8a2679b196ae73",
     "/build/layouts/finances/withdrawal-default.min.js": "/build/layouts/finances/withdrawal-default.min.js?id=3c42bd4e2f025da716d0c86de93f9239",
     "/build/layouts/finances/detail.min.js": "/build/layouts/finances/detail.min.js?id=0b3f00968d4e63f7c4124776c797e585",
@@ -131,7 +131,7 @@
     "/build/layouts/projects/raty.svg": "/build/layouts/projects/raty.svg?id=0b1a91645b8dc78dc3dc7ee4827f3c3d",
     "/build/layouts/projects/project.min.css": "/build/layouts/projects/project.min.css?id=c5efde2d29b2f5960a75fcfbee9ebb0a",
     "/build/layouts/projects/ckeditor.js": "/build/layouts/projects/ckeditor.js?id=49a096ecdb09de5173a8d475ed9c7a79",
-    "/build/layouts/projects/project.min.js": "/build/layouts/projects/project.min.js?id=844e10e151ca7b544d445fe5c9aef0b2",
+    "/build/layouts/projects/project.min.js": "/build/layouts/projects/project.min.js?id=dd8539f74fcd87231be95b96da97f76f",
     "/build/layouts/projects/index.min.css": "/build/layouts/projects/index.min.css?id=96cfadb8838f6404e6a98e582b8049f7",
     "/build/layouts/projects/index.min.js": "/build/layouts/projects/index.min.js?id=811f691be82f2b4e0e85500ce361b2b6",
     "/build/layouts/projects/empty.min.css": "/build/layouts/projects/empty.min.css?id=af8878ab32abe2c0abf3af54f070552a",
@@ -149,7 +149,7 @@
     "/build/layouts/projects/img/projeto.png": "/build/layouts/projects/img/projeto.png?id=ec7080103a916b4fe45f2d5b50aa305c",
     "/build/layouts/projectupsellconfig/previewupsellconfig.min.css": "/build/layouts/projectupsellconfig/previewupsellconfig.min.css?id=514407017127f55da51cc455df9304c9",
     "/build/layouts/reportana/index.min.css": "/build/layouts/reportana/index.min.css?id=2c3d75597e55f6f579d65839cc1705de",
-    "/build/layouts/reportana/index.min.js": "/build/layouts/reportana/index.min.js?id=24032b5c7406cce2b070b8a73c3d0af5",
+    "/build/layouts/reportana/index.min.js": "/build/layouts/reportana/index.min.js?id=75513542a5ec2aff46932f3c21379a3c",
     "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=842168624254584a96af4a5168448181",
     "/build/layouts/reports/blockedbalance.min.css": "/build/layouts/reports/blockedbalance.min.css?id=5080599290bc89e8e781b83b93e62a8b",
     "/build/layouts/reports/blockedbalance.min.js": "/build/layouts/reports/blockedbalance.min.js?id=69cadab90d1b32547a4477d6d97e7352",
@@ -205,8 +205,8 @@
     "/build/layouts/master/sirius-font.ttf": "/build/layouts/master/sirius-font.ttf?id=5dfa5a07c31443df7fa2c29bac2d0a78",
     "/build/layouts/master/sirius-font.woff": "/build/layouts/master/sirius-font.woff?id=136bf0fe67cce4a27966d24b548d7323",
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=3ac36cac0b5c4cd63903aeb3542264fd",
-    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=53d79d637689124ecc627cc1b412d81d",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=60448410ade8ebdf71de25b72dfed21c",
+    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=ab40008eb402c0fe9ceca5699469e991",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=33a0222bf06c2e47d5a94c8c32e5140a",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/master/sentry-bundle.min.js": "/build/layouts/master/sentry-bundle.min.js?id=5d4a6a8523016db604c17e8aa07e60e3",
@@ -530,6 +530,8 @@
     "/build/global/img/svg/atendimento.svg": "/build/global/img/svg/atendimento.svg?id=b457e4e58bfaf8b1acab4286d77edc8f",
     "/build/global/img/svg/atendimentos-abertos.svg": "/build/global/img/svg/atendimentos-abertos.svg?id=55b83ba4f4cadbe649e15fb390138135",
     "/build/global/img/svg/bank-notes.svg": "/build/global/img/svg/bank-notes.svg?id=5f1e4c229147092a1c3b742a1cad3f65",
+    "/build/global/img/svg/bonus-illustration-1.svg": "/build/global/img/svg/bonus-illustration-1.svg?id=47d2ae3d255a8d19d46548ee838e91aa",
+    "/build/global/img/svg/bonus-illustration-2.svg": "/build/global/img/svg/bonus-illustration-2.svg?id=0bc1923f1c53a18ef7cc2f3ff93c1dc7",
     "/build/global/img/svg/caixa-fisica.svg": "/build/global/img/svg/caixa-fisica.svg?id=e2bb14e0e64a5a954bcf563f0ff2165e",
     "/build/global/img/svg/caixinha-altura.svg": "/build/global/img/svg/caixinha-altura.svg?id=447a3a6a315c3cea1793e6ce4c47189f",
     "/build/global/img/svg/caixinha-comprimento.svg": "/build/global/img/svg/caixinha-comprimento.svg?id=13077de7f0f74d4d37a3d18922b56897",
