--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -517,6 +517,7 @@
     "/build/global/img/reports/cash.png": "/build/global/img/reports/cash.png",
     "/build/global/img/reports/close-circle.svg": "/build/global/img/reports/close-circle.svg",
     "/build/global/img/reports/empty-cart.svg": "/build/global/img/reports/empty-cart.svg",
+    "/build/global/img/reports/empty-cart.svg:Zone.Identifier": "/build/global/img/reports/empty-cart.svg:Zone.Identifier",
     "/build/global/img/reports/empty-graph.svg": "/build/global/img/reports/empty-graph.svg",
     "/build/global/img/reports/empty-state-graph.svg": "/build/global/img/reports/empty-state-graph.svg",
     "/build/global/img/reports/ico-android.svg": "/build/global/img/reports/ico-android.svg",
