--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -517,6 +517,7 @@
     "/build/global/img/reports/cash.png": "/build/global/img/reports/cash.png?id=c167b21cdbe99cdf5a6b654c2c008c03",
     "/build/global/img/reports/close-circle.svg": "/build/global/img/reports/close-circle.svg?id=8b89d2ee05b206b12320fa5d70027ab4",
     "/build/global/img/reports/empty-cart.svg": "/build/global/img/reports/empty-cart.svg?id=9a969a18a729a24f028a494aaae5a0d1",
+    "/build/global/img/reports/empty-cart.svg:Zone.Identifier": "/build/global/img/reports/empty-cart.svg:Zone.Identifier?id=7a8216696e0b2429e8077b9ee3420b29",
     "/build/global/img/reports/empty-graph.svg": "/build/global/img/reports/empty-graph.svg?id=b09d0a6922f4a6d23b6ee4cc36b86c40",
     "/build/global/img/reports/empty-state-graph.svg": "/build/global/img/reports/empty-state-graph.svg?id=e0a63f3b230aeb017a88546cd9a22616",
     "/build/global/img/reports/ico-android.svg": "/build/global/img/reports/ico-android.svg?id=124f16a170fa6481c9b2753b8b084685",
