Adjustments tooltip marketing/maps, now the tooltip is entirely button.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -519,7 +519,6 @@
     "/build/global/img/reports/cash.png": "/build/global/img/reports/cash.png",
     "/build/global/img/reports/close-circle.svg": "/build/global/img/reports/close-circle.svg",
     "/build/global/img/reports/empty-cart.svg": "/build/global/img/reports/empty-cart.svg",
-    "/build/global/img/reports/empty-cart.svg:Zone.Identifier": "/build/global/img/reports/empty-cart.svg:Zone.Identifier",
     "/build/global/img/reports/empty-graph.svg": "/build/global/img/reports/empty-graph.svg",
     "/build/global/img/reports/empty-state-graph.svg": "/build/global/img/reports/empty-state-graph.svg",
     "/build/global/img/reports/ico-android.svg": "/build/global/img/reports/ico-android.svg",
@@ -537,6 +536,10 @@
     "/build/global/img/reports/ico-coin-dollar.svg": "/build/global/img/reports/ico-coin-dollar.svg",
     "/build/global/img/reports/ico-cupons.png": "/build/global/img/reports/ico-cupons.png",
     "/build/global/img/reports/ico-desktop.svg": "/build/global/img/reports/ico-desktop.svg",
+    "/build/global/img/reports/ico-know-more.png": "/build/global/img/reports/ico-know-more.png",
+    "/build/global/img/reports/ico-know-more.png:Zone.Identifier": "/build/global/img/reports/ico-know-more.png:Zone.Identifier",
+    "/build/global/img/reports/ico-know-more.svg": "/build/global/img/reports/ico-know-more.svg",
+    "/build/global/img/reports/ico-know-more.svg:Zone.Identifier": "/build/global/img/reports/ico-know-more.svg:Zone.Identifier",
     "/build/global/img/reports/ico-linux.svg": "/build/global/img/reports/ico-linux.svg",
     "/build/global/img/reports/ico-mkt.png": "/build/global/img/reports/ico-mkt.png",
     "/build/global/img/reports/ico-mkt.svg": "/build/global/img/reports/ico-mkt.svg",
@@ -564,6 +567,8 @@
     "/build/global/img/reports/no-coupons.svg": "/build/global/img/reports/no-coupons.svg",
     "/build/global/img/reports/no-products.svg": "/build/global/img/reports/no-products.svg",
     "/build/global/img/reports/pending.png": "/build/global/img/reports/pending.png",
+    "/build/global/img/reports/txt-know-more.svg": "/build/global/img/reports/txt-know-more.svg",
+    "/build/global/img/reports/txt-know-more.svg:Zone.Identifier": "/build/global/img/reports/txt-know-more.svg:Zone.Identifier",
     "/build/global/img/reports/variation-arrow.svg": "/build/global/img/reports/variation-arrow.svg",
     "/build/global/img/svg/Arrow2.svg": "/build/global/img/svg/Arrow2.svg",
     "/build/global/img/svg/afiliados-b.svg": "/build/global/img/svg/afiliados-b.svg",
