--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -132,7 +132,7 @@
     "/build/layouts/projects/project.min.css": "/build/layouts/projects/project.min.css?id=c5efde2d29b2f5960a75fcfbee9ebb0a",
     "/build/layouts/projects/ckeditor.js": "/build/layouts/projects/ckeditor.js?id=49a096ecdb09de5173a8d475ed9c7a79",
     "/build/layouts/projects/project.min.js": "/build/layouts/projects/project.min.js?id=ad00b3a4e836dfc830e4650fdd5ac27d",
-    "/build/layouts/projects/index.min.css": "/build/layouts/projects/index.min.css?id=1c026e98c868d68485e885ee6d9cab76",
+    "/build/layouts/projects/index.min.css": "/build/layouts/projects/index.min.css?id=bc57fecb9f245c018b597e7a0d958a8c",
     "/build/layouts/projects/index.min.js": "/build/layouts/projects/index.min.js?id=43a03671885b51c72e1504c9586a8c3b",
     "/build/layouts/projects/empty.min.css": "/build/layouts/projects/empty.min.css?id=af8878ab32abe2c0abf3af54f070552a",
     "/build/layouts/projects/empty-company.min.css": "/build/layouts/projects/empty-company.min.css?id=af8878ab32abe2c0abf3af54f070552a",
@@ -179,7 +179,7 @@
     "/build/layouts/smartfunnel/index.min.css": "/build/layouts/smartfunnel/index.min.css?id=6d87b383914b84be0f8992fa7a014b44",
     "/build/layouts/smartfunnel/index.min.js": "/build/layouts/smartfunnel/index.min.js?id=5ca5068eee3cb7f2801e77b779a1f789",
     "/build/layouts/trackings/index.min.css": "/build/layouts/trackings/index.min.css?id=5906c1ce6a59f242adec9602c47494c3",
-    "/build/layouts/trackings/index.min.js": "/build/layouts/trackings/index.min.js?id=0ba1da9839e09cc1517db60c8fd0e34d",
+    "/build/layouts/trackings/index.min.js": "/build/layouts/trackings/index.min.js?id=7270707991880f7643f0777ac353bfe3",
     "/build/layouts/trackings/svg/info-tracking.svg": "/build/layouts/trackings/svg/info-tracking.svg?id=48fa024c1780becac7b52e40acdfd1d1",
     "/build/layouts/unicodrop/index.min.css": "/build/layouts/unicodrop/index.min.css?id=6d87b383914b84be0f8992fa7a014b44",
     "/build/layouts/unicodrop/index.min.js": "/build/layouts/unicodrop/index.min.js?id=8bbdca2241f1258469a0bfe09ed4238a",
@@ -569,6 +569,7 @@
     "/build/global/img/svg/imac-screen-1794_9bcbaea8-9b0e-47c0-80c0-59fc9e76afbf.svg": "/build/global/img/svg/imac-screen-1794_9bcbaea8-9b0e-47c0-80c0-59fc9e76afbf.svg?id=da9c54f1cd8fb719336d6f6f35b2f935",
     "/build/global/img/svg/info-help.svg": "/build/global/img/svg/info-help.svg?id=73a1b19833b57d1774b2c8b801296c91",
     "/build/global/img/svg/iphone-1823_65ee1c92-fbe8-40bf-81d2-c5262d29191c.svg": "/build/global/img/svg/iphone-1823_65ee1c92-fbe8-40bf-81d2-c5262d29191c.svg?id=f8fbfc59361c06d80fa29962d06a0801",
+    "/build/global/img/svg/landing-logo.svg": "/build/global/img/svg/landing-logo.svg?id=97035affee991da0591f07cb740552e6",
     "/build/global/img/svg/lixo.svg": "/build/global/img/svg/lixo.svg?id=9150e69914233080855432ec4bf7ac45",
     "/build/global/img/svg/loop-76_3e8955dc-d79b-4bf3-b4c7-8a1976056329.svg": "/build/global/img/svg/loop-76_3e8955dc-d79b-4bf3-b4c7-8a1976056329.svg?id=fc2c6a127ee6a0238ac1d249b39adaa3",
     "/build/global/img/svg/maisopcoes.svg": "/build/global/img/svg/maisopcoes.svg?id=81b1ffdaeceb3eb8dee3961089d68678",
@@ -596,6 +597,7 @@
     "/build/global/img/svg/sak.svg": "/build/global/img/svg/sak.svg?id=d41d8cd98f00b204e9800998ecf8427e",
     "/build/global/img/svg/settings.svg": "/build/global/img/svg/settings.svg?id=ade64eaa1f00639cb733a3316cc0d8ea",
     "/build/global/img/svg/shipping.svg": "/build/global/img/svg/shipping.svg?id=cdee08dc0be42bebc51e4fa44d81f490",
+    "/build/global/img/svg/shopify-logo.svg": "/build/global/img/svg/shopify-logo.svg?id=8b7135a51f9dd19fb0cc7be55bced2db",
     "/build/global/img/svg/shopify.svg": "/build/global/img/svg/shopify.svg?id=b120e2b09ff859973935ecfef26710c2",
     "/build/global/img/svg/shopping-basket.svg": "/build/global/img/svg/shopping-basket.svg?id=d608399e46c65708bbef9ae753e92d78",
     "/build/global/img/svg/sirius-lixo.svg": "/build/global/img/svg/sirius-lixo.svg?id=cf5634425bb54154c1730779dce5363c",
@@ -611,5 +613,6 @@
     "/build/global/img/svg/vitrine-b.svg": "/build/global/img/svg/vitrine-b.svg?id=d6f84f260125bce9e2df60a9786353c4",
     "/build/global/img/svg/vitrine.png": "/build/global/img/svg/vitrine.png?id=599899880b9b4167a5e08cbefcfdc820",
     "/build/global/img/svg/vitrine.svg": "/build/global/img/svg/vitrine.svg?id=7c8778ecc27cd7bcdcd8eecda1844f4c",
-    "/build/global/img/svg/whatsapp.svg": "/build/global/img/svg/whatsapp.svg?id=97764c009265fbf698c85400a55016eb"
+    "/build/global/img/svg/whatsapp.svg": "/build/global/img/svg/whatsapp.svg?id=97764c009265fbf698c85400a55016eb",
+    "/build/global/img/svg/woocommerce-logo.svg": "/build/global/img/svg/woocommerce-logo.svg?id=f140b51a10ab8aa4eca1cf39a0750a04"
 }
